[B][COLOR red]Update - v4.3.5 - Jan. 17, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed random playback failures of EasyNews links.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue where some epsiodes where incorectly
    indicated as "unaired".[/I]
[COLOR yellow]--[/COLOR][I] Fixed resolving of m2ts files.[/I]

[B][COLOR red]Update - v4.3.4 - Jan. 04, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Removed setting option "Remove Captcha".  Since switching
    to debrid only support this option is no longer needed.[/I]
[COLOR yellow]--[/COLOR][I] Allot of cleanup has been done to the Sources module
    for removed options. Scraping and source select is now faster.[/I]
[COLOR yellow]--[/COLOR][I] Fixed Library Update Service exit typo.[/I]

[B][COLOR red]Update - v4.3.3 - Jan. 01, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed issue where torrents turned off produced no sources
    with premium hosters only enabled.[/I]
[COLOR yellow]--[/COLOR][I] Reworked file size sorting. Provider sorting has been removed.
    Now sorting is base on group sort option and
    (quality/size) priority sorting.[/I]
[COLOR yellow]--[/COLOR][I] See "Source Options"-"Soures Select" for above changes.[/I]

[B][COLOR red]Update - v4.3.2 - Dec. 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Library Update failure issue due to closed database.[/I]
[COLOR yellow]--[/COLOR][I] Fixed Global Context Menu option "Clear Bookmark" call.[/I]
[COLOR yellow]--[/COLOR][I] Trakt Manager will no longer show "Scrobble Reset" if user
    settings are configured for "Local Bookmarks".[/I]
[COLOR yellow]--[/COLOR][I] Home screen widget refresh now more consistent than
    before.[/I]
[COLOR yellow]--[/COLOR][I] Removed setting for Source Select to show "Extra Info".
    This is now the hard coded default.[/I]
[COLOR yellow]--[/COLOR][I] Source Select has been re-written to now show secondary
    line "file_name", similar to Torrent files.  It now follows
    secondary line type like torrents.[/I]