@@ -1,6 +1,13 @@
+[B][COLOR red]Update - v4.3.6 - Jan. 17, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed scraper dialog failing under Background setting.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed issue where file size limit was accounted for before
+    a pack file size was re-calculated for actual episode
+    size inside the pack. This caused unnecessary removal
+    of items.[/I]
+
 [B][COLOR red]Update - v4.3.5 - Jan. 17, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fixed random playback failures of EasyNews links.[/I]
-[COLOR yellow]--[/COLOR][I] Fixed issue where some epsiodes where incorectly
+[COLOR yellow]--[/COLOR][I] Fixed issue where some episodes where incorrectly
     indicated as "unaired".[/I]
 [COLOR yellow]--[/COLOR][I] Fixed resolving of m2ts files.[/I]
 
